<resources>
    <string name="app_name">Salary Tracker</string>

    <string name="action_settings">Settings</string>

    <string name="start_hour">Start Time</string>

    <string name="end_hour">End Time</string>

    <string name="salary_per_hour_label">Rate:</string>

    <string name="start_hour_label">Start of shift</string>

    <string name="end_hour_label">End of shift</string>

    <string name="hours_worked_label">Hours worked</string>

    <string name="calculate_salary">Calculate Salary</string>

    <string name="final_salary_label">The final salary is: </string>

    <string name="enter_start_and_end_hour_toast">Please enter a starting time and a finishing time</string>

    <string name="invalid_salary_input_toast">Invalid salary</string>

    <string name="title_activity_calculate_salary">Calculate Salary</string>

    <string name="title_activity_settings">Settings</string>

    <string name="select_currency_label">Currency</string>
    <string name="add_overtime_checkbox">Add Overtime</string>
    <string name="start_overtime_button">Start Overtime</string>
    <string name="end_overtime_button">End OverTime</string>
    <string name="overtime_rate_label">Overtime rate:</string>
    <string name="start_overtime_label">Start of overtime</string>
    <string name="end_overtime_label">End of Overtime</string>
    <string name="overtime_worked_label">Overtime Worked</string>
    <string name="overall_time_worked_label">Overall Time Worked</string>
    <string name="select_overall_time_display_format_label">Overall Time Display Format</string>
    <string name="employee_name_hint">Employee Name</string>
    <string name="use_current_hour_as_start_time">Use current hour as start time</string>
    <string name="cancel">Cancel</string>

    <array name="overall_time_display_formats">

        <item>Clock (06:30)</item>
        <item>Decimal (6.5 h)</item>

    </array>
    <string name="invalid_timer_start_time_toast">Please choose a time that is earlier than the current time</string>
    <string name="earlier_start_time_label">Earlier start time:</string>
    <string name="choose_start_time_button">Choose Start Time</string>
    <string name="overtime_start_label">Overtime start:</string>
    <string name="choose_overtime_start_button">Choose Overtime Start</string>
    <string name="stop_button">Stop</string>
    <string name="time_worked_label">Time worked</string>
    <string name="salary_label">Salary</string>
    <string name="add_timer_dialog_title">Add Timer</string>
    <string name="still_in_shift_button">Still In Shift</string>
    <string name="invalid_overtime_salary_input_toast">Invalid overtime salary</string>
    <string name="invalid_timer_overtime_start_time_toast">Please choose an overtime start time that is later than the start time</string>
    <string name="enter_overtime_start_and_end_hour">Please enter the overtime starting time and a finishing time</string>
    <string name="hour_unit_symbol">h</string>
</resources>
