<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    xmlns:android="http://schemas.android.com/apk/res/android" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/txtAddTimerEmployeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_name_hint"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtAddTimerRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/salary_per_hour_label"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/lblAddTimerRateCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/chkAddTimerUseCurrentHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/use_current_hour_as_start_time" />

        <FrameLayout
            android:id="@+id/chooseStartTimeFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/chkAddTimerAddOvertime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_overtime_checkbox" />

        <FrameLayout
            android:id="@+id/addOvertimeFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddTimerConfirm"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_timer_dialog_title" />

            <Button
                android:id="@+id/btnAddTimerCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>