<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/simpleCalculateSalaryContainerScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/start_hour"
                android:textColor="#FFF" />


            <Button
                android:id="@+id/btnEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/end_hour"
                android:textColor="#FFF" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary_per_hour_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtSalary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblSalaryCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_hour_label"
                    android:textSize="20sp"
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/lblStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_hour_label"
                    android:textSize="20sp"
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/lblEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hours_worked_label"
                    android:textSize="20sp"
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/lblWorkTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>

        </TableLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkAddOvertime"
            android:text="@string/add_overtime_checkbox"/>

        <FrameLayout
            android:id="@+id/overtimeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCalculateSalary"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/calculate_salary"
            android:textColor="#FFF"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/final_salary_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
