<LinearLayout
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnStartOvertime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/start_overtime_button"
            android:textColor="#FFF" />


        <Button
            android:id="@+id/btnEndOvertime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/end_overtime_button"
            android:textColor="#FFF" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overtime_rate_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtOvertimeSalary"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblSalaryCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/start_overtime_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblStartOvertime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/end_overtime_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblEndOvertime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/overtime_worked_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblOvertimeWorked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/overall_time_worked_label"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/lblOverallTimeWorked"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </TableLayout>
</LinearLayout>