<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout android:id="@+id/layoutWorkerNameLabelAndStopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:id="@+id/timerStateIndicator"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="#99cc00"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/lblWorkerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btnStopTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/stop_button"
            android:textColor="#FFF" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:id="@+id/layoutTimeWorkedAndSalaryLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutWorkerNameLabelAndStopButton">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_worked_label"
            android:gravity="center"/>


        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salary_label" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutTimeWorkedAndSalaryLabels"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTimerTimeWorked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/lblTimerFinalSalary"
            android:textColor="#000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/btnDeleteTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:src="@drawable/button_delete" />


</RelativeLayout>